--- a/Frismart/Base.lproj/Main.storyboard
+++ b/Frismart/Base.lproj/Main.storyboard
@@ -1520,11 +1520,11 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="82.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JeP-er-ohS">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JeP-er-ohS">
                                                     <rect key="frame" x="32" y="8" width="289" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="289" id="0jI-jP-2OU">
-                                                            <variation key="heightClass=regular" constant="240"/>
+                                                            <variation key="heightClass=regular" constant="229"/>
                                                         </constraint>
                                                         <constraint firstAttribute="height" constant="20" id="wTd-I8-DMD"/>
                                                     </constraints>
@@ -1702,11 +1702,15 @@
                                                 <constraint firstAttribute="trailing" secondItem="5yY-fp-n5d" secondAttribute="trailing" constant="16" id="gaH-7P-Bm0"/>
                                                 <constraint firstItem="N96-ic-mNL" firstAttribute="leading" secondItem="PHN-8Q-9t6" secondAttribute="trailing" constant="10" id="jX2-fQ-Ruv"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="N96-ic-mNL" secondAttribute="trailing" constant="21" id="kFd-Yn-x3P">
-                                                    <variation key="heightClass=regular" constant="13"/>
+                                                    <variation key="heightClass=regular" constant="1"/>
                                                 </constraint>
-                                                <constraint firstItem="JeP-er-ohS" firstAttribute="leading" secondItem="2oE-1P-R5y" secondAttribute="leading" constant="32" id="mCA-AT-8hS"/>
+                                                <constraint firstItem="JeP-er-ohS" firstAttribute="leading" secondItem="2oE-1P-R5y" secondAttribute="leading" constant="32" id="mCA-AT-8hS">
+                                                    <variation key="heightClass=regular" constant="20"/>
+                                                </constraint>
                                                 <constraint firstAttribute="bottom" secondItem="5yY-fp-n5d" secondAttribute="bottom" id="nBg-2A-AGw"/>
-                                                <constraint firstAttribute="trailing" secondItem="T3N-Us-QgA" secondAttribute="trailing" constant="25" id="oVA-zj-3ph"/>
+                                                <constraint firstAttribute="trailing" secondItem="T3N-Us-QgA" secondAttribute="trailing" constant="25" id="oVA-zj-3ph">
+                                                    <variation key="heightClass=regular" constant="10"/>
+                                                </constraint>
                                                 <constraint firstItem="5yY-fp-n5d" firstAttribute="leading" secondItem="2oE-1P-R5y" secondAttribute="leading" constant="16" id="raG-HV-HMF"/>
                                                 <constraint firstItem="5yY-fp-n5d" firstAttribute="top" secondItem="T3N-Us-QgA" secondAttribute="bottom" constant="3" id="xLN-iA-0b8"/>
                                                 <constraint firstItem="5na-TZ-29u" firstAttribute="leading" secondItem="2oE-1P-R5y" secondAttribute="leading" constant="32" id="ztq-i6-OZu"/>
